update mnist example

--- a/mnist_example.ipynb
+++ b/mnist_example.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "960c29af",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\dkozy\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.26.0\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -50,7 +41,7 @@
     "SEED = 10101\n",
     "EPOCHS = 75\n",
     "LEARNING_RATE = 0.1\n",
-    "BATCH_SIZE = 100\n",
+    "BATCH_SIZE = 10\n",
     "np.random.seed(SEED)"
    ]
   },
@@ -213,81 +204,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 00000 - cost: 0.20783 - accuracy: 0.74088\n",
-      "Iteration: 00001 - cost: 0.08600 - accuracy: 0.86327\n",
-      "Iteration: 00002 - cost: 0.06923 - accuracy: 0.88288\n",
-      "Iteration: 00003 - cost: 0.06253 - accuracy: 0.89238\n",
-      "Iteration: 00004 - cost: 0.05777 - accuracy: 0.90415\n",
-      "Iteration: 00005 - cost: 0.05411 - accuracy: 0.91038\n",
-      "Iteration: 00006 - cost: 0.05090 - accuracy: 0.91655\n",
-      "Iteration: 00007 - cost: 0.04843 - accuracy: 0.92187\n",
-      "Iteration: 00008 - cost: 0.04610 - accuracy: 0.92480\n",
-      "Iteration: 00009 - cost: 0.04384 - accuracy: 0.92935\n",
-      "Iteration: 00010 - cost: 0.04199 - accuracy: 0.93143\n",
-      "Iteration: 00011 - cost: 0.04065 - accuracy: 0.93463\n",
-      "Iteration: 00012 - cost: 0.04008 - accuracy: 0.93612\n",
-      "Iteration: 00013 - cost: 0.03787 - accuracy: 0.93898\n",
-      "Iteration: 00014 - cost: 0.03678 - accuracy: 0.94080\n",
-      "Iteration: 00015 - cost: 0.03606 - accuracy: 0.94317\n",
-      "Iteration: 00016 - cost: 0.03491 - accuracy: 0.94430\n",
-      "Iteration: 00017 - cost: 0.03439 - accuracy: 0.94487\n",
-      "Iteration: 00018 - cost: 0.03323 - accuracy: 0.94748\n",
-      "Iteration: 00019 - cost: 0.03227 - accuracy: 0.94902\n",
-      "Iteration: 00020 - cost: 0.03189 - accuracy: 0.95040\n",
-      "Iteration: 00021 - cost: 0.03131 - accuracy: 0.95155\n",
-      "Iteration: 00022 - cost: 0.03115 - accuracy: 0.95118\n",
-      "Iteration: 00023 - cost: 0.02975 - accuracy: 0.95418\n",
-      "Iteration: 00024 - cost: 0.02920 - accuracy: 0.95485\n",
-      "Iteration: 00025 - cost: 0.02876 - accuracy: 0.95545\n",
-      "Iteration: 00026 - cost: 0.02818 - accuracy: 0.95725\n",
-      "Iteration: 00027 - cost: 0.02777 - accuracy: 0.95767\n",
-      "Iteration: 00028 - cost: 0.02758 - accuracy: 0.95810\n",
-      "Iteration: 00029 - cost: 0.02689 - accuracy: 0.95875\n",
-      "Iteration: 00030 - cost: 0.02640 - accuracy: 0.95977\n",
-      "Iteration: 00031 - cost: 0.02604 - accuracy: 0.96067\n",
-      "Iteration: 00032 - cost: 0.02546 - accuracy: 0.96173\n",
-      "Iteration: 00033 - cost: 0.02504 - accuracy: 0.96265\n",
-      "Iteration: 00034 - cost: 0.02491 - accuracy: 0.96305\n",
-      "Iteration: 00035 - cost: 0.02435 - accuracy: 0.96417\n",
-      "Iteration: 00036 - cost: 0.02400 - accuracy: 0.96460\n",
-      "Iteration: 00037 - cost: 0.02359 - accuracy: 0.96567\n",
-      "Iteration: 00038 - cost: 0.02339 - accuracy: 0.96622\n",
-      "Iteration: 00039 - cost: 0.02295 - accuracy: 0.96640\n",
-      "Iteration: 00040 - cost: 0.02284 - accuracy: 0.96708\n",
-      "Iteration: 00041 - cost: 0.02245 - accuracy: 0.96730\n",
-      "Iteration: 00042 - cost: 0.02208 - accuracy: 0.96810\n",
-      "Iteration: 00043 - cost: 0.02194 - accuracy: 0.96847\n",
-      "Iteration: 00044 - cost: 0.02160 - accuracy: 0.96878\n",
-      "Iteration: 00045 - cost: 0.02129 - accuracy: 0.96952\n",
-      "Iteration: 00046 - cost: 0.02130 - accuracy: 0.96917\n",
-      "Iteration: 00047 - cost: 0.02099 - accuracy: 0.96987\n",
-      "Iteration: 00048 - cost: 0.02070 - accuracy: 0.97060\n",
-      "Iteration: 00049 - cost: 0.02032 - accuracy: 0.97137\n",
-      "Iteration: 00050 - cost: 0.02046 - accuracy: 0.97103\n",
-      "Iteration: 00051 - cost: 0.01994 - accuracy: 0.97217\n",
-      "Iteration: 00052 - cost: 0.01994 - accuracy: 0.97253\n",
-      "Iteration: 00053 - cost: 0.01962 - accuracy: 0.97257\n",
-      "Iteration: 00054 - cost: 0.01964 - accuracy: 0.97265\n",
-      "Iteration: 00055 - cost: 0.01941 - accuracy: 0.97283\n",
-      "Iteration: 00056 - cost: 0.01934 - accuracy: 0.97313\n",
-      "Iteration: 00057 - cost: 0.01922 - accuracy: 0.97340\n",
-      "Iteration: 00058 - cost: 0.01895 - accuracy: 0.97383\n",
-      "Iteration: 00059 - cost: 0.01885 - accuracy: 0.97367\n",
-      "Iteration: 00060 - cost: 0.01909 - accuracy: 0.97287\n",
-      "Iteration: 00061 - cost: 0.01848 - accuracy: 0.97478\n",
-      "Iteration: 00062 - cost: 0.01837 - accuracy: 0.97495\n",
-      "Iteration: 00063 - cost: 0.01839 - accuracy: 0.97470\n",
-      "Iteration: 00064 - cost: 0.01801 - accuracy: 0.97550\n",
-      "Iteration: 00065 - cost: 0.01803 - accuracy: 0.97550\n",
-      "Iteration: 00066 - cost: 0.01828 - accuracy: 0.97525\n",
-      "Iteration: 00067 - cost: 0.01783 - accuracy: 0.97572\n",
-      "Iteration: 00068 - cost: 0.01783 - accuracy: 0.97587\n",
-      "Iteration: 00069 - cost: 0.01763 - accuracy: 0.97648\n",
-      "Iteration: 00070 - cost: 0.01764 - accuracy: 0.97587\n",
-      "Iteration: 00071 - cost: 0.01735 - accuracy: 0.97708\n",
-      "Iteration: 00072 - cost: 0.01720 - accuracy: 0.97655\n",
-      "Iteration: 00073 - cost: 0.01717 - accuracy: 0.97692\n",
-      "Iteration: 00074 - cost: 0.01726 - accuracy: 0.97648\n"
+      "Iteration: 00000 - cost: 0.04573 - accuracy: 0.92297\n",
+      "Iteration: 00001 - cost: 0.03404 - accuracy: 0.94332\n",
+      "Iteration: 00002 - cost: 0.02968 - accuracy: 0.95180\n",
+      "Iteration: 00003 - cost: 0.02710 - accuracy: 0.95577\n",
+      "Iteration: 00004 - cost: 0.02325 - accuracy: 0.96403\n",
+      "Iteration: 00005 - cost: 0.02087 - accuracy: 0.96725\n",
+      "Iteration: 00006 - cost: 0.01753 - accuracy: 0.97355\n",
+      "Iteration: 00007 - cost: 0.01655 - accuracy: 0.97547\n",
+      "Iteration: 00008 - cost: 0.01578 - accuracy: 0.97640\n",
+      "Iteration: 00009 - cost: 0.01397 - accuracy: 0.98022\n",
+      "Iteration: 00010 - cost: 0.01359 - accuracy: 0.98093\n",
+      "Iteration: 00011 - cost: 0.01430 - accuracy: 0.98018\n",
+      "Iteration: 00012 - cost: 0.01264 - accuracy: 0.98258\n",
+      "Iteration: 00013 - cost: 0.01288 - accuracy: 0.98258\n",
+      "Iteration: 00014 - cost: 0.01167 - accuracy: 0.98532\n",
+      "Iteration: 00015 - cost: 0.01179 - accuracy: 0.98457\n",
+      "Iteration: 00016 - cost: 0.01232 - accuracy: 0.98320\n",
+      "Iteration: 00017 - cost: 0.01261 - accuracy: 0.98165\n",
+      "Iteration: 00018 - cost: 0.01136 - accuracy: 0.98578\n",
+      "Iteration: 00019 - cost: 0.01198 - accuracy: 0.98423\n",
+      "Iteration: 00020 - cost: 0.01091 - accuracy: 0.98638\n",
+      "Iteration: 00021 - cost: 0.01194 - accuracy: 0.98423\n",
+      "Iteration: 00022 - cost: 0.00981 - accuracy: 0.98947\n",
+      "Iteration: 00023 - cost: 0.01093 - accuracy: 0.98670\n",
+      "Iteration: 00024 - cost: 0.01140 - accuracy: 0.98485\n",
+      "Iteration: 00025 - cost: 0.01017 - accuracy: 0.98800\n",
+      "Iteration: 00026 - cost: 0.01034 - accuracy: 0.98802\n",
+      "Iteration: 00027 - cost: 0.01081 - accuracy: 0.98673\n",
+      "Iteration: 00028 - cost: 0.01084 - accuracy: 0.98738\n",
+      "Iteration: 00029 - cost: 0.00936 - accuracy: 0.99038\n",
+      "Iteration: 00030 - cost: 0.01062 - accuracy: 0.98832\n",
+      "Iteration: 00031 - cost: 0.01043 - accuracy: 0.98913\n",
+      "Iteration: 00032 - cost: 0.01194 - accuracy: 0.98620\n",
+      "Iteration: 00033 - cost: 0.01182 - accuracy: 0.98517\n",
+      "Iteration: 00034 - cost: 0.00999 - accuracy: 0.98973\n",
+      "Iteration: 00035 - cost: 0.01052 - accuracy: 0.98867\n",
+      "Iteration: 00036 - cost: 0.01108 - accuracy: 0.98777\n",
+      "Iteration: 00037 - cost: 0.00975 - accuracy: 0.99072\n",
+      "Iteration: 00038 - cost: 0.01101 - accuracy: 0.98885\n",
+      "Iteration: 00039 - cost: 0.01074 - accuracy: 0.99000\n",
+      "Iteration: 00040 - cost: 0.01159 - accuracy: 0.98748\n",
+      "Iteration: 00041 - cost: 0.01070 - accuracy: 0.99042\n",
+      "Iteration: 00042 - cost: 0.01156 - accuracy: 0.98903\n",
+      "Iteration: 00043 - cost: 0.01062 - accuracy: 0.98992\n",
+      "Iteration: 00044 - cost: 0.01070 - accuracy: 0.99030\n",
+      "Iteration: 00045 - cost: 0.01092 - accuracy: 0.99023\n",
+      "Iteration: 00046 - cost: 0.01135 - accuracy: 0.99017\n",
+      "Iteration: 00047 - cost: 0.01103 - accuracy: 0.99048\n",
+      "Iteration: 00048 - cost: 0.01123 - accuracy: 0.99028\n",
+      "Iteration: 00049 - cost: 0.01157 - accuracy: 0.98908\n",
+      "Iteration: 00050 - cost: 0.01148 - accuracy: 0.99043\n",
+      "Iteration: 00051 - cost: 0.01157 - accuracy: 0.98927\n",
+      "Iteration: 00052 - cost: 0.01208 - accuracy: 0.98913\n",
+      "Iteration: 00053 - cost: 0.01137 - accuracy: 0.99078\n",
+      "Iteration: 00054 - cost: 0.01189 - accuracy: 0.98967\n",
+      "Iteration: 00055 - cost: 0.01299 - accuracy: 0.98692\n",
+      "Iteration: 00056 - cost: 0.01238 - accuracy: 0.98913\n",
+      "Iteration: 00057 - cost: 0.01641 - accuracy: 0.98303\n",
+      "Iteration: 00058 - cost: 0.01158 - accuracy: 0.99063\n",
+      "Iteration: 00059 - cost: 0.01231 - accuracy: 0.98985\n",
+      "Iteration: 00060 - cost: 0.01325 - accuracy: 0.98947\n",
+      "Iteration: 00061 - cost: 0.01187 - accuracy: 0.99030\n",
+      "Iteration: 00062 - cost: 0.01136 - accuracy: 0.99090\n",
+      "Iteration: 00063 - cost: 0.01147 - accuracy: 0.99105\n",
+      "Iteration: 00064 - cost: 0.01215 - accuracy: 0.98995\n",
+      "Iteration: 00065 - cost: 0.01230 - accuracy: 0.99052\n",
+      "Iteration: 00066 - cost: 0.01151 - accuracy: 0.99118\n",
+      "Iteration: 00067 - cost: 0.01218 - accuracy: 0.99017\n",
+      "Iteration: 00068 - cost: 0.01289 - accuracy: 0.98955\n",
+      "Iteration: 00069 - cost: 0.01211 - accuracy: 0.99062\n",
+      "Iteration: 00070 - cost: 0.01184 - accuracy: 0.99087\n",
+      "Iteration: 00071 - cost: 0.01187 - accuracy: 0.99087\n",
+      "Iteration: 00072 - cost: 0.01195 - accuracy: 0.99078\n",
+      "Iteration: 00073 - cost: 0.01181 - accuracy: 0.99097\n",
+      "Iteration: 00074 - cost: 0.01196 - accuracy: 0.99072\n"
      ]
     }
    ],
@@ -298,22 +289,6 @@
     "params_values = nnb.train(X_train, y_train.reshape((y_train.shape[0], 1)), \n",
     "                          network_layers, EPOCHS, LEARNING_RATE, SEED, BATCH_SIZE)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4db40d8d",
-   "metadata": {},
-   "source": [
-    "Save train result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53d23b75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -333,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set: cost: 0.02465 - accuracy: 0.96140\n"
+      "Test set: cost: 0.03019 - accuracy: 0.96970\n"
      ]
     }
    ],
@@ -346,11 +321,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4db40d8d",
+   "metadata": {},
+   "source": [
+    "Save train result"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1137a8c7",
+   "execution_count": 11,
+   "id": "f100f4d9",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "nnb.save_model(network_layers, params_values, \"output\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da7ed8c9",
+   "metadata": {},
    "source": []
   }
  ],
