increase mnist example accuracy

--- a/mnist_example.ipynb
+++ b/mnist_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "960c29af",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
    "source": [
     "SILENT = False\n",
     "SEED = 10101\n",
-    "EPOCHS = 75\n",
+    "EPOCHS = 200\n",
     "LEARNING_RATE = 0.1\n",
     "BATCH_SIZE = 10\n",
     "np.random.seed(SEED)"
@@ -182,6 +182,7 @@
     "    {\"nodes\": n_inputs},\n",
     "    {\"nodes\": 32, \"activation\": nnb.relu},\n",
     "    {\"nodes\": 64, \"activation\": nnb.relu},\n",
+    "    {\"nodes\": 128, \"activation\": nnb.relu},\n",
     "    {\"nodes\": n_outputs, \"activation\": nnb.softmax}\n",
     "]"
    ]
@@ -204,81 +205,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 00000 - cost: 0.04573 - accuracy: 0.92297\n",
-      "Iteration: 00001 - cost: 0.03404 - accuracy: 0.94332\n",
-      "Iteration: 00002 - cost: 0.02968 - accuracy: 0.95180\n",
-      "Iteration: 00003 - cost: 0.02710 - accuracy: 0.95577\n",
-      "Iteration: 00004 - cost: 0.02325 - accuracy: 0.96403\n",
-      "Iteration: 00005 - cost: 0.02087 - accuracy: 0.96725\n",
-      "Iteration: 00006 - cost: 0.01753 - accuracy: 0.97355\n",
-      "Iteration: 00007 - cost: 0.01655 - accuracy: 0.97547\n",
-      "Iteration: 00008 - cost: 0.01578 - accuracy: 0.97640\n",
-      "Iteration: 00009 - cost: 0.01397 - accuracy: 0.98022\n",
-      "Iteration: 00010 - cost: 0.01359 - accuracy: 0.98093\n",
-      "Iteration: 00011 - cost: 0.01430 - accuracy: 0.98018\n",
-      "Iteration: 00012 - cost: 0.01264 - accuracy: 0.98258\n",
-      "Iteration: 00013 - cost: 0.01288 - accuracy: 0.98258\n",
-      "Iteration: 00014 - cost: 0.01167 - accuracy: 0.98532\n",
-      "Iteration: 00015 - cost: 0.01179 - accuracy: 0.98457\n",
-      "Iteration: 00016 - cost: 0.01232 - accuracy: 0.98320\n",
-      "Iteration: 00017 - cost: 0.01261 - accuracy: 0.98165\n",
-      "Iteration: 00018 - cost: 0.01136 - accuracy: 0.98578\n",
-      "Iteration: 00019 - cost: 0.01198 - accuracy: 0.98423\n",
-      "Iteration: 00020 - cost: 0.01091 - accuracy: 0.98638\n",
-      "Iteration: 00021 - cost: 0.01194 - accuracy: 0.98423\n",
-      "Iteration: 00022 - cost: 0.00981 - accuracy: 0.98947\n",
-      "Iteration: 00023 - cost: 0.01093 - accuracy: 0.98670\n",
-      "Iteration: 00024 - cost: 0.01140 - accuracy: 0.98485\n",
-      "Iteration: 00025 - cost: 0.01017 - accuracy: 0.98800\n",
-      "Iteration: 00026 - cost: 0.01034 - accuracy: 0.98802\n",
-      "Iteration: 00027 - cost: 0.01081 - accuracy: 0.98673\n",
-      "Iteration: 00028 - cost: 0.01084 - accuracy: 0.98738\n",
-      "Iteration: 00029 - cost: 0.00936 - accuracy: 0.99038\n",
-      "Iteration: 00030 - cost: 0.01062 - accuracy: 0.98832\n",
-      "Iteration: 00031 - cost: 0.01043 - accuracy: 0.98913\n",
-      "Iteration: 00032 - cost: 0.01194 - accuracy: 0.98620\n",
-      "Iteration: 00033 - cost: 0.01182 - accuracy: 0.98517\n",
-      "Iteration: 00034 - cost: 0.00999 - accuracy: 0.98973\n",
-      "Iteration: 00035 - cost: 0.01052 - accuracy: 0.98867\n",
-      "Iteration: 00036 - cost: 0.01108 - accuracy: 0.98777\n",
-      "Iteration: 00037 - cost: 0.00975 - accuracy: 0.99072\n",
-      "Iteration: 00038 - cost: 0.01101 - accuracy: 0.98885\n",
-      "Iteration: 00039 - cost: 0.01074 - accuracy: 0.99000\n",
-      "Iteration: 00040 - cost: 0.01159 - accuracy: 0.98748\n",
-      "Iteration: 00041 - cost: 0.01070 - accuracy: 0.99042\n",
-      "Iteration: 00042 - cost: 0.01156 - accuracy: 0.98903\n",
-      "Iteration: 00043 - cost: 0.01062 - accuracy: 0.98992\n",
-      "Iteration: 00044 - cost: 0.01070 - accuracy: 0.99030\n",
-      "Iteration: 00045 - cost: 0.01092 - accuracy: 0.99023\n",
-      "Iteration: 00046 - cost: 0.01135 - accuracy: 0.99017\n",
-      "Iteration: 00047 - cost: 0.01103 - accuracy: 0.99048\n",
-      "Iteration: 00048 - cost: 0.01123 - accuracy: 0.99028\n",
-      "Iteration: 00049 - cost: 0.01157 - accuracy: 0.98908\n",
-      "Iteration: 00050 - cost: 0.01148 - accuracy: 0.99043\n",
-      "Iteration: 00051 - cost: 0.01157 - accuracy: 0.98927\n",
-      "Iteration: 00052 - cost: 0.01208 - accuracy: 0.98913\n",
-      "Iteration: 00053 - cost: 0.01137 - accuracy: 0.99078\n",
-      "Iteration: 00054 - cost: 0.01189 - accuracy: 0.98967\n",
-      "Iteration: 00055 - cost: 0.01299 - accuracy: 0.98692\n",
-      "Iteration: 00056 - cost: 0.01238 - accuracy: 0.98913\n",
-      "Iteration: 00057 - cost: 0.01641 - accuracy: 0.98303\n",
-      "Iteration: 00058 - cost: 0.01158 - accuracy: 0.99063\n",
-      "Iteration: 00059 - cost: 0.01231 - accuracy: 0.98985\n",
-      "Iteration: 00060 - cost: 0.01325 - accuracy: 0.98947\n",
-      "Iteration: 00061 - cost: 0.01187 - accuracy: 0.99030\n",
-      "Iteration: 00062 - cost: 0.01136 - accuracy: 0.99090\n",
-      "Iteration: 00063 - cost: 0.01147 - accuracy: 0.99105\n",
-      "Iteration: 00064 - cost: 0.01215 - accuracy: 0.98995\n",
-      "Iteration: 00065 - cost: 0.01230 - accuracy: 0.99052\n",
-      "Iteration: 00066 - cost: 0.01151 - accuracy: 0.99118\n",
-      "Iteration: 00067 - cost: 0.01218 - accuracy: 0.99017\n",
-      "Iteration: 00068 - cost: 0.01289 - accuracy: 0.98955\n",
-      "Iteration: 00069 - cost: 0.01211 - accuracy: 0.99062\n",
-      "Iteration: 00070 - cost: 0.01184 - accuracy: 0.99087\n",
-      "Iteration: 00071 - cost: 0.01187 - accuracy: 0.99087\n",
-      "Iteration: 00072 - cost: 0.01195 - accuracy: 0.99078\n",
-      "Iteration: 00073 - cost: 0.01181 - accuracy: 0.99097\n",
-      "Iteration: 00074 - cost: 0.01196 - accuracy: 0.99072\n"
+      "Iteration: 00000 - cost: 0.04255 - accuracy: 0.92940\n",
+      "Iteration: 00004 - cost: 0.02062 - accuracy: 0.96583\n",
+      "Iteration: 00008 - cost: 0.01361 - accuracy: 0.97902\n",
+      "Iteration: 00012 - cost: 0.01181 - accuracy: 0.98242\n",
+      "Iteration: 00016 - cost: 0.01000 - accuracy: 0.98600\n",
+      "Iteration: 00020 - cost: 0.01004 - accuracy: 0.98678\n",
+      "Iteration: 00024 - cost: 0.01071 - accuracy: 0.98635\n",
+      "Iteration: 00028 - cost: 0.00803 - accuracy: 0.99190\n",
+      "Iteration: 00032 - cost: 0.00889 - accuracy: 0.98943\n",
+      "Iteration: 00036 - cost: 0.00905 - accuracy: 0.99032\n",
+      "Iteration: 00040 - cost: 0.00837 - accuracy: 0.99317\n",
+      "Iteration: 00044 - cost: 0.00831 - accuracy: 0.99277\n",
+      "Iteration: 00048 - cost: 0.00880 - accuracy: 0.99210\n",
+      "Iteration: 00052 - cost: 0.00904 - accuracy: 0.99227\n",
+      "Iteration: 00056 - cost: 0.00820 - accuracy: 0.99365\n",
+      "Iteration: 00060 - cost: 0.00844 - accuracy: 0.99358\n",
+      "Iteration: 00064 - cost: 0.00823 - accuracy: 0.99383\n",
+      "Iteration: 00068 - cost: 0.00823 - accuracy: 0.99388\n",
+      "Iteration: 00072 - cost: 0.00827 - accuracy: 0.99410\n",
+      "Iteration: 00076 - cost: 0.00829 - accuracy: 0.99407\n",
+      "Iteration: 00080 - cost: 0.00829 - accuracy: 0.99393\n",
+      "Iteration: 00084 - cost: 0.00832 - accuracy: 0.99400\n",
+      "Iteration: 00088 - cost: 0.00837 - accuracy: 0.99405\n",
+      "Iteration: 00092 - cost: 0.00836 - accuracy: 0.99395\n",
+      "Iteration: 00096 - cost: 0.00836 - accuracy: 0.99410\n",
+      "Iteration: 00100 - cost: 0.00836 - accuracy: 0.99412\n",
+      "Iteration: 00104 - cost: 0.00837 - accuracy: 0.99415\n",
+      "Iteration: 00108 - cost: 0.00837 - accuracy: 0.99425\n",
+      "Iteration: 00112 - cost: 0.00839 - accuracy: 0.99417\n",
+      "Iteration: 00116 - cost: 0.00849 - accuracy: 0.99428\n",
+      "Iteration: 00120 - cost: 0.00853 - accuracy: 0.99428\n",
+      "Iteration: 00124 - cost: 0.00854 - accuracy: 0.99427\n",
+      "Iteration: 00128 - cost: 0.00855 - accuracy: 0.99433\n",
+      "Iteration: 00132 - cost: 0.00859 - accuracy: 0.99428\n",
+      "Iteration: 00136 - cost: 0.00862 - accuracy: 0.99428\n",
+      "Iteration: 00140 - cost: 0.00863 - accuracy: 0.99430\n",
+      "Iteration: 00144 - cost: 0.00865 - accuracy: 0.99432\n",
+      "Iteration: 00148 - cost: 0.00867 - accuracy: 0.99437\n",
+      "Iteration: 00152 - cost: 0.00868 - accuracy: 0.99435\n",
+      "Iteration: 00156 - cost: 0.00869 - accuracy: 0.99438\n",
+      "Iteration: 00160 - cost: 0.00871 - accuracy: 0.99435\n",
+      "Iteration: 00164 - cost: 0.00873 - accuracy: 0.99433\n",
+      "Iteration: 00168 - cost: 0.00873 - accuracy: 0.99438\n",
+      "Iteration: 00172 - cost: 0.00874 - accuracy: 0.99438\n",
+      "Iteration: 00176 - cost: 0.00875 - accuracy: 0.99445\n",
+      "Iteration: 00180 - cost: 0.00877 - accuracy: 0.99445\n",
+      "Iteration: 00184 - cost: 0.00878 - accuracy: 0.99448\n",
+      "Iteration: 00188 - cost: 0.00880 - accuracy: 0.99450\n",
+      "Iteration: 00192 - cost: 0.00881 - accuracy: 0.99450\n",
+      "Iteration: 00196 - cost: 0.00884 - accuracy: 0.99450\n"
      ]
     }
    ],
@@ -308,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set: cost: 0.03019 - accuracy: 0.96970\n"
+      "Test set: cost: 0.02892 - accuracy: 0.97490\n"
      ]
     }
    ],
